better looking form

--- a/Dispel.Web/Pages/Index.cshtml
+++ b/Dispel.Web/Pages/Index.cshtml
@@ -5,11 +5,27 @@
     ViewData["Title"] = "IRC log converter";
 }
 
-<form asp-page="Download">
-    <label asp-for="Name"></label>
-    <input asp-for="Name" type="text" />
-    <span asp-validation-for="Name" class="text-danger"></span><br />
-    <button type="submit">Download</button>
+<form asp-page="Download" class="form-horizontal">
+    <div class="form-group">
+        <label asp-for="Name" class="col-sm-2 control-label"></label>
+        <div class="col-sm-10">
+            <input asp-for="Name" type="text" class="form-control" />
+            <span asp-validation-for="Name" class="text-danger"></span>
+        </div>
+    </div>
+    
+    <div class="form-group">
+        <label for="fake" class="col-sm-2 control-label">Ignored</label>
+        <div class="col-sm-10">
+            <input id="fake" type="text" class="form-control" />
+        </div>    
+    </div>
+
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-default ">Download</button>
+        </div>
+    </div>
 </form>
 
 @section Scripts {
