--- a/Dispel/style.css
+++ b/Dispel/style.css
@@ -4,6 +4,13 @@ body {
     color: rgb(15, 15, 15);
 }
 
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: rgb(15, 15, 15);
+        color: rgb(255, 255, 255);
+    }
+}
+
 /* mIRC colours, approximated */
 span.c0 { color: rgb(255,255,255); }
 span.c1 { color: rgb(0,0,0); }
